--- a/package.json
+++ b/package.json
@@ -12,26 +12,27 @@
   },
   "dependencies": {
     "@fluentui/react-components": "^9.46.8",
-    "@fluentui/react-window-provider": "^2.2.18",
     "@fluentui/react-context-selector": "^9.1.54",
-    "next": "12.1.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "openai": "^4.70.2",
+    "@fluentui/react-window-provider": "^2.2.18",
     "@tanstack/react-query": "^5.25.0",
+    "date-fns": "^3.3.1",
+    "next": "12.1.5",
+    "next-pwa": "^5.6.0",
+    "openai": "^4.70.2",
     "query-string": "^9.0.0",
-    "date-fns": "^3.3.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.0",
-    "eslint-plugin-import": "^2.29.1",
     "@next/eslint-plugin-next": "12.1.5",
     "@types/enzyme": "3.10.12",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.27",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.34.0",
     "husky": "7.0.4",
     "prettier": "^3.2.5",
     "renovate": "^37.235.0",
