--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@tanstack/react-query": "^5.25.0",
     "date-fns": "^3.3.1",
     "next": "12.1.5",
-    "next-pwa": "^5.6.0",
+    "@ducanh2912/next-pwa": "^10.2.9",
     "openai": "^4.70.2",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
